--- a/PAGES/7c_gotchas/index.html
+++ b/PAGES/7c_gotchas/index.html
@@ -2407,8 +2407,8 @@ task&#40;&#41;</code></pre>
 <p>The approach with closures can introduce type instability if we additionally redefine variables/arguments &#40;e.g., when we update a variable in an output&#41;, change the order in which we define functions, or use anonymous functions.</p>
 <p>We explore these three cases below. Throughout the examples, we refer to the containing function as the  <em>outer function</em>, and the closure as the  <em>inner function</em>. </p>
  <h4> When the Issue Arises </h4>
-<p>Before introducing examples from real applications, let&#39;s consider three abstract examples that starkly illustrate the issue. All have in common that <strong>the closure is accessing variables or functions from its outer function scope, without passing them as arguments</strong>. Depending on how we perform this operation, type instability might arise. </p>
-<p>We&#39;ll also show that you could solve these issues by specifying the arguments of the inner function,  <em>including the functions used</em>. While passing all variables as arguments is natural in Julia, additionally including the used functions as arguments is not. This is why we recommend instead defining the outer and inner functions as two separate functions, as in &quot;No Closure&quot; above.</p>
+<p>Before introducing examples from real applications, let&#39;s consider three abstract examples. They that starkly illustrate when closures are problematic for type stability. All these examples share that <strong>the closure is accessing variables or functions from the outer function's scope, without passing them as arguments</strong>.</p>
+<p>We could solve the issues by specifying all the arguments of the inner function,  <em>including the functions used</em>. While passing all variables as arguments is natural in Julia, additionally including the used functions as arguments is not. This is why we recommend instead defining the outer and inner functions as two separate functions, as in &quot;No Closure&quot; above.</p>
 <p>The first example reveals that the location of the inner function could matter.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2782,7 +2782,7 @@ end
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + 🠘</kbd>)</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\8a0_memory_allocations" class="nextPage">Next Section (<kbd>Ctrl + 🠚</kbd>)<img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified April 28, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified April 29, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
