--- a/links/index.html
+++ b/links/index.html
@@ -1862,7 +1862,7 @@ section{
  </style>
 
  <div class="linkPage">
-<section id="13633231208144796923" class="scrollspy">
+<section id="13633231208144796923" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1872,7 +1872,7 @@ section{
     </div>
   </div>
 </section>
-<section id="software" class="scrollspy section-bg-color">
+<section id="software" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1889,7 +1889,7 @@ section{
     </div>
   </div>
 </section>
-<section id="text_editors" class="scrollspy">
+<section id="text_editors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1910,7 +1910,7 @@ section{
     </div>
   </div>
 </section>
-<section id="julia_documentation_and_forums" class="scrollspy section-bg-color">
+<section id="julia_documentation_and_forums" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1927,7 +1927,7 @@ section{
     </div>
   </div>
 </section>
-<section id="free_ai_tools" class="scrollspy">
+<section id="free_ai_tools" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
