--- a/PAGES/7a_introToPerformace/index.html
+++ b/PAGES/7a_introToPerformace/index.html
@@ -1725,6 +1725,8 @@ color: white;
 
   
 
+  
+
 
 
 
@@ -2003,7 +2005,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2016,7 +2018,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="when_should_we_care_about_speed" class="scrollspy section-bg-color">
+<section id="when_should_we_care_about_speed" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
