--- a/PAGES/7b01_preliminaries_stability/index.html
+++ b/PAGES/7b01_preliminaries_stability/index.html
@@ -1725,6 +1725,8 @@ color: white;
 
   
 
+  
+
 
 
 
@@ -2003,7 +2005,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2013,7 +2015,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="remarks_on_types" class="scrollspy section-bg-color">
+<section id="remarks_on_types" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2073,7 +2075,7 @@ c::T where T &lt;: Any &#61; 2</code></pre>
     </div>
   </div>
 </section>
-<section id="functions_type_inference_multiple_dispatch_and_compilation" class="scrollspy">
+<section id="functions_type_inference_multiple_dispatch_and_compilation" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
