--- a/PAGES/7b1_performanceBasics/index.html
+++ b/PAGES/7b1_performanceBasics/index.html
@@ -1725,6 +1725,8 @@ color: white;
 
   
 
+  
+
 
 
 
@@ -2003,7 +2005,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2014,7 +2016,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="defining_type_stability" class="scrollspy">
+<section id="defining_type_stability" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2026,7 +2028,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="checking_for_type_stability" class="scrollspy section-bg-color">
+<section id="checking_for_type_stability" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2096,7 +2098,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="when_a_yellow_warning_turns_red" class="scrollspy">
+<section id="when_a_yellow_warning_turns_red" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2161,7 +2163,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="concrete_types_and_supertypes" class="scrollspy section-bg-color">
+<section id="concrete_types_and_supertypes" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
