--- a/PAGES/7b2_fixes_stability/index.html
+++ b/PAGES/7b2_fixes_stability/index.html
@@ -1725,6 +1725,8 @@ color: white;
 
   
 
+  
+
 
 
 
@@ -2003,7 +2005,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2017,7 +2019,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="when_are_we_using_global_variables" class="scrollspy">
+<section id="when_are_we_using_global_variables" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2063,7 +2065,7 @@ z &#61; log&#40;y&#41;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="achieving_type_stability_with_global_variables" class="scrollspy section-bg-color">
+<section id="achieving_type_stability_with_global_variables" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
