--- a/PAGES/8b1_views/index.html
+++ b/PAGES/8b1_views/index.html
@@ -1725,6 +1725,8 @@ color: white;
 
   
 
+  
+
 
 
 
@@ -2003,7 +2005,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2015,7 +2017,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="views_of_slices" class="scrollspy section-bg-color">
+<section id="views_of_slices" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2064,7 +2066,7 @@ foo&#40;x&#41; &#61; @views sum&#40;x&#91;x .&gt; 0.5&#93;&#41;</code></pre> </d
     </div>
   </div>
 </section>
-<section id="copying_data_may_be_faster" class="scrollspy">
+<section id="copying_data_may_be_faster" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
