--- a/PAGES/8d_lazy/index.html
+++ b/PAGES/8d_lazy/index.html
@@ -1725,6 +1725,8 @@ color: white;
 
   
 
+  
+
 
 
 
@@ -2003,7 +2005,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2014,7 +2016,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="generators" class="scrollspy section-bg-color">
+<section id="generators" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2080,7 +2082,7 @@ foo&#40;x&#41; &#61; sum&#40;a * 2 for a in x&#41;              # 0 allocations<
     </div>
   </div>
 </section>
-<section id="iterators" class="scrollspy">
+<section id="iterators" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2159,7 +2161,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="lazy_broadcasting" class="scrollspy section-bg-color">
+<section id="lazy_broadcasting" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
