--- a/PAGES/overview_5/index.html
+++ b/PAGES/overview_5/index.html
@@ -1725,6 +1725,8 @@ color: white;
 
   
 
+  
+
 
 
 
@@ -2003,7 +2005,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="13633231208144796923" class="scrollspy section-bg-color">
+<section id="13633231208144796923" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
