--- a/index.html
+++ b/index.html
@@ -1808,7 +1808,7 @@ section{
 
 <div class="franklin-content">
  <div class="home_container">
-<section id="welcome_to_the_site" class="scrollspy">
+<section id="welcome_to_the_site" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1820,7 +1820,7 @@ section{
     </div>
   </div>
 </section>
-<section id="a_quick_overview_of_the_book" class="scrollspy section-bg-color">
+<section id="a_quick_overview_of_the_book" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1843,7 +1843,7 @@ section{
     </div>
   </div>
 </section>
-<section id="keyboard_shortcuts" class="scrollspy">
+<section id="keyboard_shortcuts" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1905,7 +1905,7 @@ section{
     </div>
   </div>
 </section>
-<section id="13633231208144796923" class="scrollspy section-bg-color">
+<section id="13633231208144796923" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
