--- a/PAGES/6f_pipes/index.html
+++ b/PAGES/6f_pipes/index.html
@@ -2245,10 +2245,10 @@ a &#61; -2
 output &#61; a |&gt; abs |&gt; &#40;x -&gt; 2 * x&#41; |&gt; round
 
 #equivalent, but more readable
-output &#61; a              |&gt;
-         abs            |&gt;
-         x -&gt; 2 * x     |&gt;
-         round</code></pre> </div></div> 
+output &#61;       a            |&gt;
+               abs          |&gt;
+               x -&gt; 2 * x   |&gt;
+               round</code></pre> </div></div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">using Pipe
 a &#61; -2
@@ -2256,9 +2256,9 @@ a &#61; -2
 output &#61; @pipe a |&gt; abs |&gt; 2 * _ |&gt; round
 
 #equivalent, but more readable
-output &#61; @pipe a         |&gt;
-               abs       |&gt;
-               2 * _     |&gt;
+output &#61; @pipe a            |&gt;
+               abs          |&gt;
+               2 * _        |&gt;
                round</code></pre> </div></div> 
  </div></div>
 <p>  </p></details></div>
@@ -2266,11 +2266,11 @@ output &#61; @pipe a         |&gt;
     </div>
   </div>
 </section>
-<section id="let_blocks_and_pipes_for_long_names" class="scrollspy section-bg-color">
+<section id="let_blocks_and_pipes_for_long_names_optional" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Let Blocks and Pipes For Long Names</h2></p>
+        <h2>Let Blocks and Pipes For Long Names (<strong><i>OPTIONAL</i></strong>)</h2></p>
 <p>Let blocks and pipes can also be employed for temporarily rename variables. This is potentially useful when a variable has intentionally a lengthy name to convey its meaning clearly. The feature allows users to strike a balance between using meaningful variable names, while also maintaining code readability.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2826,7 +2826,7 @@ for multiple pics in a row
       </li>
       
       <li class="nav-item">
-        <a class="nav-link" href="#let_blocks_and_pipes_for_long_names" data-offset="-40">Let Blocks and Pipes For Long Names</a>
+        <a class="nav-link" href="#let_blocks_and_pipes_for_long_names_optional" data-offset="-40">Let Blocks and Pipes For Long Names (<strong><i>OPTIONAL</i></strong>)</a>
       </li>
       
     </ul>
