--- a/PAGES/6f_pipes/index.html
+++ b/PAGES/6f_pipes/index.html
@@ -2059,8 +2059,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>We introduce two approaches for computing outputs that involve multiple intermediate steps. First, we introduce the so-called <span style="color: rgb(62, 121, 180);"><strong>let blocks</strong></span>, which create a new scope and return the last line as the output. Essentially, let blocks provide a concise way to encapsulate a sequence of operations. This makes it similar to a function, but with less syntactic clutter. Let blocks are particularly helpful to maintain a tidy namespace, as all variables within the &quot;let&quot; scope are local and therefore inaccessible outside its block. </p>
-<p>The second approach is based on <span style="color: rgb(62, 121, 180);"><strong>pipes</strong></span>. They make it possible chain a series of operations together, providing the final output as their result. As the built-in pipes become unwieldy beyond a single-argument function, we also present an alternative implementation stemming from the <code>Pipe</code> package.</p>
+<p>We introduce two approaches for computing outputs that involve multiple intermediate steps. First, we introduce the so-called <span style="color: rgb(62, 121, 180);"><strong>let blocks</strong></span>, which create a new scope and return the last line as the output. Essentially, let blocks provide a concise way to encapsulate a sequence of operations. This makes them similar to functions, but with less syntactic clutter. Moreover, all variables within the &quot;let&quot; scope are local and therefore inaccessible outside it, making Let blocks particularly helpful to maintain a tidy namespace.</p>
+<p>The second approach is based on <span style="color: rgb(62, 121, 180);"><strong>pipes</strong></span>. They make it possible to chain a series of operations together, providing the final output as their result. As the built-in pipe can become unwieldy beyond a single-argument function, we also present an alternative implementation stemming from the <code>Pipe</code> package.</p>
 <p>      </div>
     </div>
   </div>
