--- a/PAGES/3c2_tuples/index.html
+++ b/PAGES/3c2_tuples/index.html
@@ -1243,7 +1243,7 @@ section a:hover{
     <li>
       <a href="/julia_book/list_posts/"><img src="/julia_book/assets/icons/books03.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:5px;">
-        Book Parts
+        Chapters
       </a>
     </li>
     <li>      
@@ -1260,24 +1260,20 @@ section a:hover{
                 <h2> NOTATION</h2>
             </div>
             <div class="modal-body" style="height:auto;">
-                <span style="color:blue; font-weight:bold;">Code</span> is displayed in <span style="color:blue; font-weight:bold;">blue boxes</span>, 
-                whereas <span style="color:rgb(63, 136, 99); font-weight:bold;">output in REPL</span> is in <span style="color:rgb(63, 136, 99); font-weight:bold;">green boxes</span>. 
-                <span class="brmine"></span>
-                Generic expressions are denoted by <b>&lt;this should be replaced by some code&gt;</b> (e.g., <code>&lt;function&gt;</code> and  <code> &lt;operator&gt;</code>). 
+                Generic expressions are represented in <b>&lt;something&gt;</b> (e.g., <code>&lt;function&gt;</code> and <code> &lt;operator&gt;</code>). 
                 This is just a notation, and the symbols <code>&lt;</code> and <code>&gt;</code> should not be misconstrued as Julia's syntax.
-                <span class="brmine"></span>
-
-                The website layout is adjusted, so that you can <b>zoom in or out on the page</b> if you find the main body's text too small or too big. <br>
             </div>
-            
+            <div class="modal-header">
+                <h2> PAGE ZOOM</h2>
+            </div>
+                <div class="modal-body">
+                    If you want to adjust the size of the font, <b>zoom in or out on pages</b> by using <kbd>Ctrl</kbd>+<kbd>+</kbd> and <kbd>Ctrl</kbd>+<kbd>-</kbd>. The font will adjust automatically. <br>
+                <span class="brmine"></span>
+            </div>            
             <div class="modal-header">
                 <h2> KEYBOARD SHORTCUTS</h2>
             </div>
             <div class="modal-body">
-                The website includes keyboard shortcuts to facilitate its navigation.
-                <br>
-                <br>                
-
                 <style type="text/css">
                     .tg {
                         border-collapse: collapse;
@@ -1370,13 +1366,14 @@ section a:hover{
                         </tr>                                          
                     </tbody>
                 </table>
+                <span class="brmine"></span>
             </div>
 
             <div class="modal-header">
-                <h2> TIME MEASURES</h2>
+                <h2> TIME MEASUREMENT</h2>
             </div>
             <div class="modal-body">
-                The equivalence of time measures used for benchmarking time execution are as follows.
+                When benchmarking, the equivalence of time measures is as follows.
                 <br>
                 <br>
             
@@ -2063,7 +2060,7 @@ color: white;
 <p>For now, it suffices to know that there are various forms of collections, each serving a different purpose. Tuples in particular are faster than vectors for collections comprising a few elements. However, tuples are immutable, unlike vectors. This means that, once a tuple is created, its elements cannot be added, removed, or modified.</p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Warning!</b> </span>  </div>  <div class=content>     We emphasize that <strong>tuples should only be used when the number of elements is small</strong>. Large tuples will result in slow computations at best, or directly trigger fatal errors. For large collections, you should keep using vectors.  </div>  </div>
+      <b>Warning!</b> </span>  </div>  <div class=content>     We emphasize that <strong>tuples should only be used when the number of elements is small</strong>. Large tuples will result in slow computations at best, or directly trigger fatal errors. Keep using vectors for large collections.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2133,8 +2130,10 @@ x &#61;  4,5,6           #alternative notation</code></pre>
     <!-- <p class="m-0"> -->
     <div class="container">
        <span class="left-text"><a href="/julia_book/PAGES\3c_arrays" class="prevPage"><img src="/julia_book/assets/icons/prev-page.png"
-        style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + 🠘</kbd>)</a></span>
-       <span class="right-text"><a href="/julia_book/PAGES\overview_2" class="nextPage">Next Section (<kbd>Ctrl + 🠚</kbd>)<img src="/julia_book/assets/icons/next-page.png"
+        style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + <img src="/julia_book/assets/icons/arrow_left.png" style="width:15px; height:auto;opacity:0.9;padding-bottom:2px;">
+          </kbd>)</a></span>
+       <span class="right-text"><a href="/julia_book/PAGES\overview_2" class="nextPage">Next Section (<kbd>Ctrl + <img src="/julia_book/assets/icons/arrow_right.png" style="width:15px; height:auto;opacity:0.9;padding-bottom:2px;">
+    </kbd>)<img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
     <span class="center-text">  © Martin Alfaro <br>Last Modified April 30, 2024 </span>  
   </div>
