--- a/PAGES/6d_application01/index.html
+++ b/PAGES/6d_application01/index.html
@@ -1243,7 +1243,7 @@ section a:hover{
     <li>
       <a href="/julia_book/list_posts/"><img src="/julia_book/assets/icons/books03.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:5px;">
-        Book Parts
+        Chapters
       </a>
     </li>
     <li>      
@@ -1260,24 +1260,20 @@ section a:hover{
                 <h2> NOTATION</h2>
             </div>
             <div class="modal-body" style="height:auto;">
-                <span style="color:blue; font-weight:bold;">Code</span> is displayed in <span style="color:blue; font-weight:bold;">blue boxes</span>, 
-                whereas <span style="color:rgb(63, 136, 99); font-weight:bold;">output in REPL</span> is in <span style="color:rgb(63, 136, 99); font-weight:bold;">green boxes</span>. 
-                <span class="brmine"></span>
-                Generic expressions are denoted by <b>&lt;this should be replaced by some code&gt;</b> (e.g., <code>&lt;function&gt;</code> and  <code> &lt;operator&gt;</code>). 
+                Generic expressions are represented in <b>&lt;something&gt;</b> (e.g., <code>&lt;function&gt;</code> and <code> &lt;operator&gt;</code>). 
                 This is just a notation, and the symbols <code>&lt;</code> and <code>&gt;</code> should not be misconstrued as Julia's syntax.
-                <span class="brmine"></span>
-
-                The website layout is adjusted, so that you can <b>zoom in or out on the page</b> if you find the main body's text too small or too big. <br>
             </div>
-            
+            <div class="modal-header">
+                <h2> PAGE ZOOM</h2>
+            </div>
+                <div class="modal-body">
+                    If you want to adjust the size of the font, <b>zoom in or out on pages</b> by using <kbd>Ctrl</kbd>+<kbd>+</kbd> and <kbd>Ctrl</kbd>+<kbd>-</kbd>. The font will adjust automatically. <br>
+                <span class="brmine"></span>
+            </div>            
             <div class="modal-header">
                 <h2> KEYBOARD SHORTCUTS</h2>
             </div>
             <div class="modal-body">
-                The website includes keyboard shortcuts to facilitate its navigation.
-                <br>
-                <br>                
-
                 <style type="text/css">
                     .tg {
                         border-collapse: collapse;
@@ -1370,13 +1366,14 @@ section a:hover{
                         </tr>                                          
                     </tbody>
                 </table>
+                <span class="brmine"></span>
             </div>
 
             <div class="modal-header">
-                <h2> TIME MEASURES</h2>
+                <h2> TIME MEASUREMENT</h2>
             </div>
             <div class="modal-body">
-                The equivalence of time measures used for benchmarking time execution are as follows.
+                When benchmarking, the equivalence of time measures is as follows.
                 <br>
                 <br>
             
@@ -2056,7 +2053,7 @@ color: white;
 <div class="franklin-content">
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> </span>  </div>  <div class=content>     This section&#39;s scripts are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/6d_application01/codeDownload"><strong>here</strong></a>, under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.10.0.<br/><br/> For more accurate benchmarks, each variable <code>x</code> in <code>@btime</code> is wrapped in <code>ref&#40;x&#41; &#61; &#40;Ref&#40;x&#41;&#41;&#91;&#93;</code> and interpolated through <code>&#36;</code>.  </div>  </div>
+      <b>Remark</b> </span>  </div>  <div class=content>     This section&#39;s scripts are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/6d_application01/codeDownload"><strong>here</strong></a>, under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.10.0.  </div>  </div>
 <section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
@@ -2459,8 +2456,10 @@ stats_views      &#61; NamedTuple&#40;vector_of_tuples&#41;</code></pre> </div> 
     <!-- <p class="m-0"> -->
     <div class="container">
        <span class="left-text"><a href="/julia_book/PAGES\6e_useful_funs" class="prevPage"><img src="/julia_book/assets/icons/prev-page.png"
-        style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + 🠘</kbd>)</a></span>
-       <span class="right-text"><a href="/julia_book/PAGES\7a_introToPerformace" class="nextPage">Next Section (<kbd>Ctrl + 🠚</kbd>)<img src="/julia_book/assets/icons/next-page.png"
+        style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + <img src="/julia_book/assets/icons/arrow_left.png" style="width:15px; height:auto;opacity:0.9;padding-bottom:2px;">
+          </kbd>)</a></span>
+       <span class="right-text"><a href="/julia_book/PAGES\7a_introToPerformace" class="nextPage">Next Section (<kbd>Ctrl + <img src="/julia_book/assets/icons/arrow_right.png" style="width:15px; height:auto;opacity:0.9;padding-bottom:2px;">
+    </kbd>)<img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
     <span class="center-text">  © Martin Alfaro <br>Last Modified April 30, 2024 </span>  
   </div>
